@@ -1,6 +1,7 @@
 v1.4.5 (WIP)
 - Add multithreading support
 - Add ContextMenu (initially supported by List)
+- Add TreeView.Transform
 - Merge upstream mouse support
 
 v1.4.4 (2020-02-24)
